k8sweatherdeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-forecasting
  labels:
    app: weather-forecasting-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weather-forecasting-app
  template:
    metadata:
      labels:
        app: weather-forecasting-app
    spec:
      containers:
      - name: weather-forecasting
        image: elenafalcone9/weather_forecasting_image
        resources: 
          requests: 
            memory: "50Mi"
            cpu: "400m"
          limits:
            memory: "100Mi"
            cpu: "800m"
        ports:
        - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: weather-forecasting
  namespace: default
spec:
  type: NodePort
  selector:
    app: weather-forecasting-app
  ports:
  - port: 8501
    targetPort: 8501
    nodePort: 30080
