k8sweatherdeploymentwithingress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-forecasting
  labels:
    app: weather-forecasting-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weather-forecasting-app
  template:
    metadata:
      labels:
        app: weather-forecasting-app
    spec:
      containers:
      - name: weather-forecasting
        image: elenafalcone9/weather_forecasting_image
        resources:
          requests: 
            memory: "80Mi"
            cpu: "400m"
          limits:
            memory: "250Mi"
            cpu: "800m"
        ports:
        - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: weather-forecasting-app
  namespace: default
spec:
  type: ClusterIP 
  selector:
    app: weather-forecasting-app
  ports:
  - port: 8501 
    targetPort: 8501 
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weather-forecasting-ingress
  namespace: default
  annotations:
    appprotectdos.f5.com/app-protect-dos-resource: "default/dos-protected"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx 
  rules:
  - host: localhost 
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: weather-forecasting-app
            port:
              number: 8501
